# Shamsu

./: .gitignore  AGENTS.md  README.md  SHAMSU_10day_dev_plan.md  SHAMSU_week2_milestone_v2.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
agent context/: AGENTS.md  DEV-TASK-DIVI.MD  MILESTONE-2-FINISH-PLAN.md  PROGRESS.md  REQUIREMENTS.md
scripts/: install.ps1  install.sh  run-shamsu.ps1  run-shamsu.sh
shamsu/: interfaces.py  types.py
shamsu/agents/: audit_workflow.py  bugfix_workflow.py  code_edit_workflow.py  doc_workflow.py  qa_workflow.py  test_generation_workflow.py
shamsu/cli/: repl.py
shamsu/context/: budget.py  builder.py
shamsu/core/: coordinator.py
shamsu/indexer/: parser.py  walker.py
shamsu/llm/: manager.py
shamsu/patch/: engine.py  preview.py
shamsu/prd/: extractor.py  input.py  parser.py  project.py  state.py
shamsu/retriever/: search.py
shamsu/runtime/: __init__.py  models.py  ollama.py
tests/: test_audit_workflow.py  test_bugfix_workflow.py  test_cli_routing.py  test_cli_workspace.py  test_code_edit_workflow.py  test_command_runner.py  test_day1_plan_features.py  test_day1_scaffold.py  test_day2_index_and_prd.py  test_day3_project_templates.py  test_django_generation.py  test_doc_workflow.py  test_generation_state.py  test_git_tool.py  test_install_script_safety.py  test_native_runtime_cli.py  test_patch_engine.py  test_prd_extractor_v2.py  test_prd_input_and_plan.py  test_real_indexed_qa.py  test_runtime_ollama.py  test_session_logging.py  test_test_generation_workflow.py
(+15 files in other folders)
